--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,65 +1,38 @@
-version: '3.9'
+version: '3.5'
+
 services:
-  app:
-    container_name: golang_container
+  bog-postgres-consaliotest:
+    container_name: bog-postgres-consaliotest
+    image: postgres:12
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
-      - DATABASE_PORT=${DB_PORT}
-      - TEST_POSTGRES_USER=${TEST_DB_USER}
-      - TEST_POSTGRES_PASSWORD=${TEST_DB_PASSWORD}
-      - TEST_POSTGRES_DB=${TEST_DB_NAME}
-      - TEST_DATABASE_HOST=${TEST_DB_HOST}
-      - TEST_DATABASE_PORT=${TEST_DB_PORT}
-    tty: true
-    build: .
-    ports:
-      - 8000:8080
-    restart: on-failure
+      POSTGRES_USER: ${POSTGRES_USER:-orthos}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-orthos}
+      PGDATA: /data/postgres
     volumes:
-      - .:/app
+      - postgres:/data/postgres
+    ports:
+      - "5451:5432"
+    networks:
+      - postgres
+    restart: unless-stopped
+
+  pgweb-consalio:
+    container_name: bog-pgweb-consaliotest
+    image: sosedoff/pgweb
+    restart: unless-stopped
+    ports:
+      - "5452:8081"
+    environment:
+      - DATABASE_URL=postgres://orthos:orthos@host.docker.internal:5451/postgres?sslmode=disable
     depends_on:
-      - postgresdb
+      - bog-postgres-consaliotest
     networks:
-      - learning
+      - postgres
 
-  postgresdb:
-    image: postgres:latest
-    container_name: postgres_container
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
-    ports:
-      - '1234:5432'
-    volumes:
-      - ./pg_data:/var/lib/postgresql/data
-    networks:
-      - learning
-
-  postgresdb_test:
-    image: postgres:latest
-    container_name: postgres_test_container
-    environment:
-      - POSTGRES_USER=${TEST_DB_USER}
-      - POSTGRES_PASSWORD=${TEST_DB_PASSWORD}
-      - POSTGRES_DB=${TEST_DB_NAME}
-      - DATABASE_HOST=${TEST_DB_HOST}
-    ports:
-      - '4568:5432'
-    volumes:
-      - ./pg_data_test:/var/lib/postgresql/data
-    networks:
-      - learning
+networks:
+  postgres:
+    driver: bridge
 
 volumes:
-  pg_data:
-  pg_data_test:
-
-# Networks to be created to facilitate communication between containers
-networks:
-  learning:
-    driver: bridge
+  postgres:
+  pgadmin:
